Authorization Validation Endpoints: Created mock endpoints for testing authorization functionality
- Implemented JWT-based authentication and role-based access control
- Configured security settings in application.properties
- Updated SecurityConfiguration and JwtUtils for authorization validation
- Added CustomAuthenticationEntryPoint for handling unauthorized access

This commit adds mock endpoints for testing authorization functionality and configures security settings for validation.`

--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,33 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	//Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	//Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	//Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	//MapStruct
+	implementation 'org.mapstruct:mapstruct:1.6.0'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.0'
+
+	//MySQLConnector
+	implementation 'com.mysql:mysql-connector-j:9.0.0'
+
+	//OpenApi
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
+	//Security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	//JWT
+	implementation 'com.auth0:java-jwt:4.4.0'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
