Connect transaction microservice with stock using Feign and Hystrix
- Implemented Feign client for communication with the stock microservice.
- Configured Hystrix for fallback handling in case of errors.
- Managed exceptions with CustomErrorDecoder.
- Sent JWT token via FeignClientInterceptor.
- Implemented SupplyUseCase to allow the warehouse assistant to add supplies.
- Ensured that new supplies increase the existing stock quantity.
- Added error handling to verify changes in case of any failures during the supply operation.

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 	//Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	//Data-JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 	//MapStruct
 	implementation 'org.mapstruct:mapstruct:1.6.0'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.0'
@@ -50,6 +53,15 @@ dependencies {
 
 	//JWT
 	implementation 'com.auth0:java-jwt:4.4.0'
+
+	// Feign
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'
+
+	// Apache Client
+	implementation 'io.github.openfeign:feign-httpclient:13.3'
+
+	//Mockito
+	testImplementation 'org.mockito:mockito-core:5.12.0'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
