Integrate stock microservice with transaction service using Feign
- Implemented addNewRegisterFromStock method to create a new supply register in transaction service when a new article is added to stock microservice.
- Configured Feign client to communicate with stock microservice.
- Sent JWT token via FeignClientInterceptor for secure communication.
- Implemented getRestockDate method to retrieve restock dates from database.
- Ensured data consistency between stock microservice and transaction service.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,5 @@ security.jwt.key.private=a1e4b94e4dcbdba6d2b0a5f3eb05c164698bde2931fda389e68c192
 security.jwt.user.generator=EMAZON-USER-BACKEND
 
 #Feing Config
-emazon-stock.url=http://localhost:8080/article
+emazon_stock.url=http://localhost:8080/article
 feign.hystrix.enabled=true
